拆分core模块，新增mp代码生成